@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: color.c,v 1.85.2.1 2009/07/26 21:58:39 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: color.c,v 1.85.2.2 2009/08/02 23:38:51 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - color.c */
@@ -57,7 +57,8 @@ int supply_extended_color_specs = 0;
 
 static void draw_inside_color_smooth_box_postscript __PROTO((FILE * out));
 static void draw_inside_color_smooth_box_bitmap __PROTO((FILE * out));
-void cbtick_callback __PROTO((AXIS_INDEX axis, double place, char *text, struct lp_style_type grid));
+void cbtick_callback __PROTO((AXIS_INDEX axis, double place, char *text, 
+			struct lp_style_type grid, struct ticmark *userlabels));
 
 
 
@@ -416,7 +417,8 @@ cbtick_callback(
     AXIS_INDEX axis,
     double place,
     char *text,
-    struct lp_style_type grid) /* linetype or -2 for no grid */
+    struct lp_style_type grid, /* linetype or -2 for no grid */
+    struct ticmark *userlabels)
 {
     int len = (text ? CB_AXIS.ticscale : CB_AXIS.miniticscale)
 	* (CB_AXIS.tic_in ? -1 : 1) * (term->h_tic);
