@@ -1,3 +1,10 @@
+2009-08-02  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/misc.c src/save.c src/graphics.c src/term_api.h docs/gnuplot.doc
+	docs/plotstyles.gnu:  Add new linestyle property 'pointinterval'.
+	This is a modified version of patchset #2653943 contributed by
+	Hans (oe6jwf@users.sourceforge.net).
+
 2009-07-28  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (df_readascii): Handle xticlabels() in the case of
